--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,29 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Portfolio
+email: farcasmihai91@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hello! My name is Mihai and I'm a web developer with knowledge of both frontend and backend technologies,
+  specialising in JavaScript, TypeScript, NodeJS, HTML and CSS. 
+  I am also an aspiring software architect, determined to learn more about NoSQL databases, Micro-Service architecture,
+  Big Data and Machine Learning.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: farcasmihai91
+github_username:  farcasmihai91
+
+permalink: /:categories/:title
+
+links:
+  - title: about
+    url: /about
+  - title: work
+    url: /work
+  - title: articles
+    url: /articles
+  - title: hire me
+    url: /hire-me
 
 # Build settings
 markdown: kramdown
