--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Big Data and Machine Learning.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: farcasmihai91
 github_username:  farcasmihai91
+twitter_username: mihai_farcas
 
 permalink: /:categories/:title
 
