--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
   specialising in JavaScript, TypeScript, NodeJS, HTML and CSS. 
   I am also an aspiring software architect, determined to learn more about NoSQL databases, Micro-Service architecture,
   Big Data and Machine Learning.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/jekyll-portfolio" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 github_username:  farcasmihai91
 twitter_username: mihai_farcas
